--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,146 +7,151 @@
     android:background="@drawable/backgroundall"
     tools:context="com.example.amr.sunbula.ChangePasswordActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/imagechangetpassword"
-        android:layout_width="@dimen/_120sdp"
-        android:layout_height="@dimen/_120sdp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:src="@drawable/logo"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/textchangepassword"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/imagechangetpassword"
-        android:layout_gravity="center"
-        android:layout_marginEnd="@dimen/_8sdp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginStart="@dimen/_8sdp"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:text="Change password"
-        android:textColor="#ffffff"
-        android:textSize="@dimen/_25ssp"
-        android:textStyle="bold"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/imagechangetpassword"
+            android:layout_width="@dimen/_120sdp"
+            android:layout_height="@dimen/_120sdp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:src="@drawable/logo"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_8sdp"
-        android:background="#BB000000"
-        android:orientation="vertical"
-        android:padding="@dimen/_8sdp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textchangepassword">
+        <TextView
+            android:id="@+id/textchangepassword"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imagechangetpassword"
+            android:layout_gravity="center"
+            android:layout_marginEnd="@dimen/_8sdp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginStart="@dimen/_8sdp"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:text="Change password"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/_25ssp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imagechangetpassword" />
 
-        <EditText
-            android:id="@+id/txt_email_newpass"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_50ssp"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_marginBottom="@dimen/_5sdp"
-            android:background="@null"
-            android:drawableLeft="@drawable/message"
-            android:drawablePadding="@dimen/_15sdp"
-            android:gravity="left"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:padding="@dimen/_15sdp"
-            android:textStyle="bold" />
+        <LinearLayout
+            android:id="@+id/linearLayout2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_8sdp"
+            android:background="#BB000000"
+            android:orientation="vertical"
+            android:padding="@dimen/_8sdp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textchangepassword">
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/tab_enable" />
+            <EditText
+                android:id="@+id/txt_email_newpass"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50ssp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@null"
+                android:drawableLeft="@drawable/message"
+                android:drawablePadding="@dimen/_15sdp"
+                android:gravity="left"
+                android:hint="Email"
+                android:inputType="textEmailAddress"
+                android:padding="@dimen/_15sdp"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/txt_code_newpass"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_50ssp"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_marginBottom="@dimen/_5sdp"
-            android:background="@null"
-            android:drawableLeft="@drawable/_eye"
-            android:drawablePadding="@dimen/_15sdp"
-            android:gravity="left"
-            android:hint="Confirm code"
-            android:inputType="text"
-            android:padding="@dimen/_15sdp"
-            android:textStyle="bold" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/tab_enable" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/tab_enable" />
+            <EditText
+                android:id="@+id/txt_code_newpass"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50ssp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@null"
+                android:drawableLeft="@drawable/_eye"
+                android:drawablePadding="@dimen/_15sdp"
+                android:gravity="left"
+                android:hint="Confirm code"
+                android:inputType="text"
+                android:padding="@dimen/_15sdp"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/txtnewpass"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_50ssp"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_marginBottom="@dimen/_5sdp"
-            android:background="@null"
-            android:drawableLeft="@drawable/password"
-            android:drawablePadding="@dimen/_15sdp"
-            android:gravity="left"
-            android:hint="New password"
-            android:inputType="textPassword"
-            android:padding="@dimen/_15sdp"
-            android:textStyle="bold" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/tab_enable" />
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/tab_enable" />
+            <EditText
+                android:id="@+id/txtnewpass"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50ssp"
+                android:layout_centerHorizontal="true"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@null"
+                android:drawableLeft="@drawable/password"
+                android:drawablePadding="@dimen/_15sdp"
+                android:gravity="left"
+                android:hint="New password"
+                android:inputType="textPassword"
+                android:padding="@dimen/_15sdp"
+                android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/txtconfirmpass"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_50ssp"
-            android:layout_gravity="center_horizontal|top"
-            android:layout_marginBottom="@dimen/_5sdp"
-            android:background="@null"
-            android:drawableLeft="@drawable/_eye"
-            android:drawablePadding="@dimen/_15sdp"
-            android:gravity="left"
-            android:hint="Confirm password"
-            android:inputType="textPassword"
-            android:padding="@dimen/_15sdp"
-            android:textStyle="bold" />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/tab_enable" />
 
-    </LinearLayout>
+            <EditText
+                android:id="@+id/txtconfirmpass"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_50ssp"
+                android:layout_gravity="center_horizontal|top"
+                android:layout_marginBottom="@dimen/_5sdp"
+                android:background="@null"
+                android:drawableLeft="@drawable/_eye"
+                android:drawablePadding="@dimen/_15sdp"
+                android:gravity="left"
+                android:hint="Confirm password"
+                android:inputType="textPassword"
+                android:padding="@dimen/_15sdp"
+                android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btn_changepassword"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/_75sdp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
-        android:background="@color/colorAccent"
-        android:text="Confirm"
-        android:textAllCaps="false"
-        android:textSize="@dimen/_20ssp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="0.0" />
-</android.support.constraint.ConstraintLayout>
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_changepassword"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/_75sdp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="0dp"
+            android:background="@color/colorAccent"
+            android:text="Confirm"
+            android:textAllCaps="false"
+            android:textSize="@dimen/_20ssp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+            app:layout_constraintVertical_bias="0.0" />
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
